<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".TaskOneActivity">

    <EditText
        android:id="@+id/task_1_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/task_1_margin"
        android:hint="@string/task_1_edit_text_hint"
        android:inputType="text"
        android:autofillHints="name" />

    <Button
        android:id="@+id/task_1_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_1_button_save_label" />

    <Button
        android:id="@+id/task_1_button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_1_button_show_label" />

    <TextView
        android:id="@+id/task_1_text_view_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/task_1_margin"
        android:textSize="@dimen/task_1_names_text_size"
        android:padding="@dimen/task_1_padding_names"
        tools:text="alex" />


</LinearLayout>