<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".task2.TaskTwoActivity">

    <EditText
        android:id="@+id/task_2_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/task_2_edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/task_2_save_and_show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_2_button_save_and_show_label" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/task_2_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/task_2_student_id_label"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/task_2_name_label"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/task_2_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/task_2_id_label"
            app:layout_constraintStart_toStartOf="@id/task_2_id_label"/>

        <TextView
            android:id="@+id/task_2_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/task_2_student_name_label"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/task_2_id_label"
            app:layout_constraintEnd_toStartOf="@id/task_2_surname_label"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/task_2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/task_2_name_label"
            app:layout_constraintStart_toStartOf="@id/task_2_name_label"/>

        <TextView
            android:id="@+id/task_2_surname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/task_2_student_surname_label"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/task_2_name_label"
            app:layout_constraintEnd_toStartOf="@id/task_2_grade_label"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/task_2_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/task_2_surname_label"
            app:layout_constraintStart_toStartOf="@id/task_2_surname_label"/>

        <TextView
            android:id="@+id/task_2_grade_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/task_2_student_grade_label"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/task_2_surname_label"
            app:layout_constraintEnd_toStartOf="@id/task_2_birthday_year_label"
            />

        <TextView
            android:id="@+id/task_2_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/task_2_grade_label"
            app:layout_constraintStart_toStartOf="@id/task_2_grade_label"/>

        <TextView
            android:id="@+id/task_2_birthday_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/task_2_student_birthday_year_label"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/task_2_grade_label"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/task_2_birthday_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/task_2_birthday_year_label"
            app:layout_constraintStart_toStartOf="@id/task_2_birthday_year_label"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>